# Ergos

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  projects.db  vcpkg.json
.cache/clangd/index/: databaseHandler.cpp.C30493D604A14759.idx  databaseHandler.hpp.3797CAEE76379B4C.idx  dateTime.cpp.9B2EC43E6F763996.idx  main.cpp.7AB2D3F4D9B97689.idx  project.cpp.11BE7416D581EFEB.idx  project.hpp.B45AED0355FA6609.idx  projectHandler.cpp.80C3CFFE4CBAE316.idx  sqlite3.c.3548EEA617A3A67E.idx  sqlite3.h.A7B9516303D00E7C.idx  temperature.cpp.E1C554615816B6C9.idx  temperature.hpp.FBDC0D0B01269968.idx  utils.cpp.873E2B3730EADF24.idx  utils.hpp.5B14D5E620C6EAF0.idx
.github/workflows/: cmake-multi-platform.yml
classes/: CMakeLists.txt  databaseHandler.cpp  project.cpp  projectHandler.cpp  temperature.cpp  utils.cpp
cmake/: loadEnv.cmake
include/: CMakeLists.txt  DateTime.cpp  Logger.cpp  Logger.hpp  Utils.cpp  Utils.hpp  databaseHandler.hpp  logger.cpp  logger.hpp  project.hpp  projectHandler.hpp  temperature.hpp  utils.cpp  utils.hpp
libraries/: CMakeLists.txt  sqlite3.h
logs/: log_2024-01-17.txt
src/: main.cpp
src/entities/: project.cpp  project.hpp
src/handlers/: CommandHandler.cpp  CommandHandler.hpp  DatabaseHandler.cpp  DatabaseHandler.hpp  MenuHandler.cpp  MenuHandler.hpp  ProjectHandler.cpp  ProjectHandler.hpp  commandHandler.cpp  commandHandler.hpp  databaseHandler.cpp  databaseHandler.hpp  projectHandler.cpp  projectHandler.hpp
src/tasks/: ExampleTask.cpp  ExampleTask.hpp  TemperatureTask.cpp  TemperatureTask.hpp  temperature.cpp
